--- a/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -1,1 +1,27 @@
 /* All styles for your header Components live here */
+.header-container {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+  }
+  
+  .header-content {
+    padding: 1rem 0;
+  }
+  
+  .image-thumbnail {
+    max-width: 100%;
+    height: 50px;;
+  }
+  
+  .title-primary {
+    font-weight: 700;
+  }
+  
+  .title-secondary {
+    color: #17c0de;
+    font-size: 0.9rem;
+  }
+  
+  
