--- a/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
+++ b/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
@@ -1,1 +1,41 @@
 /* All styles for your Card Components live here */
+.card-container {
+    width: 100%;
+  }
+  
+  .card-container a{
+    display:flex;
+    flex-direction: column;
+    align-items: flex-end;
+    width: 100%;
+    text-decoration: none;
+    color: #911818;
+  }
+  
+  .card-banner {
+    max-width: 82%;
+    margin-right: 20px;
+  
+  }
+  
+  .card-banner img {
+    max-width: 100%;
+    border-radius: 4px;
+  }
+  
+  .card-content {
+    padding-left: 1rem;
+    border: 1px solid #911818;
+    border-radius: 4px;
+    max-width: 80%;
+    margin-right: 1rem;
+  }
+  
+  .card-content-title {
+    font-weight: 700;
+  }
+  
+  .card-content-link {
+    color: #17c0de;
+    font-size: 0.9rem;
+  }
